# django_drf_boilerplate

./: .env  README.md  db.sqlite3  justfile  pyproject.toml  requirements.txt
config/: schema.py  settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
