[project]
name = "chatapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "billiard==4.2.4",
    "bleach==6.3.0",
    "brotli==1.2.0",
    "celery==5.6.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "cssselect2==0.9.0",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dj-rest-auth==7.0.1",
    "django==5.2.9",
    "django-allauth==65.13.1",
    "django-ckeditor-5==0.2.18",
    "django-cors-headers==4.9.0",
    "django-environ==0.12.0",
    "django-filter==25.2",
    "django-htmx>=1.27.0",
    "django-ipware==7.0.1",
    "django-js-asset==3.1.2",
    "django-mptt==0.18.0",
    "django-silk==5.5.0",
    "django-unfold==0.83.1",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "geoip2==5.2.0",
    "google-auth==2.49.1",
    "google-genai==1.68.0",
    "gprof2dot==2025.4.14",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "inflection==0.5.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kombu==5.6.2",
    "mailtrap==2.4.0",
    "maxminddb==3.1.1",
    "moviepy==2.2.1",
    "multidict==6.7.1",
    "numpy==2.4.3",
    "packaging==26.0",
    "pdfkit==1.0.0",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydyf==0.12.1",
    "pyjwt==2.10.1",
    "pymysql==1.1.2",
    "pyphen==0.17.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-ipware==3.0.0",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.5",
    "tenacity==9.1.4",
    "tinycss2==1.5.1",
    "tinyhtml5==2.1.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "uritemplate==4.2.0",
    "urllib3==2.6.2",
    "vine==5.1.0",
    "wcwidth==0.6.0",
    "weasyprint==68.1",
    "webencodings==0.5.1",
    "websockets==16.0",
    "yarl==1.23.0",
    "zopfli==0.4.1",
]


